// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  data-testid="todo-1"
>
  <h1>
    send status email
  </h1>
</div>
`;

exports[`matches snapshot1 1`] = `
<div
  data-testid="todo-2"
>
  <strike>
    <h1>
      enter timesheet
    </h1>
  </strike>
</div>
`;
